# fayls

./: Cargo.toml  Dockerfile  README.md  config.yaml  recipe.json
.github/workflows/: push-container.yaml
migrations/: 1_create_fayls.sql  2_create_contents_index.sql  3_create_shares.sql  V1__create_fayls.sql
src/: api.rs  app.rs  config.rs  content_indexing.rs  db.rs  default_config.yaml  error.rs  fayls.rs  fswatch.rs  indexing.rs  lib.rs  main.rs  path_indexing.rs  utils.rs  web.rs
src/web/: av.rs  views.rs
static/: app.css  app.js
