[package]
name = "fayls"
version = "0.1.0"
authors = ["muxcmux <storm.bg@gmail.com>"]
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "signal"] }
tokio-util = "0.7"

sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }

anyhow = "1"

salvo ={ version = "0.92", features = ["affix-state"] }

tracing = "0.1"
tracing-subscriber = "0.3"

walkdir = "2"

crc-fast = "1"

serde = { version = "1", features = ["derive"] }

config = "0.15"
