[package]
name = "fayls"
version = "0.1.0"
authors = ["muxcmux <storm.bg@gmail.com>"]
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "signal", "fs", "process"] }
tokio-util = { version = "0.7", features = ["rt"] }

sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }

anyhow = "1"
thiserror = "2"
tempfile = "3"

salvo ={ version = "0.93", features = ["affix-state"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

walkdir = "2"

crc-fast = "1"

serde = { version = "1", features = ["derive"] }

config = "0.15"

[profile.release]
lto = true
