[package]
name = "fayls"
version = "0.1.0"
authors = ["muxcmux <storm.bg@gmail.com>"]
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "signal", "fs", "process"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"

salvo ={ version = "0.93", features = ["affix-state", "caching-headers", "compression", "sse"] }
# need these because salvo doesn't re-export them
# and so you can't pass queries around in functions
# or build query strings fffs
form_urlencoded = "1.2"
multimap = "0.10"

sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }

maud = "0.27"

anyhow = "1"
thiserror = "2"
tempfile = "3"

walkdir = "2"
notify-debouncer-full = { version = "0.8.0-rc.2", features = ["tokio"] }

crc-fast = "1"
base64-turbo = "0.1"

serde = { version = "1", features = ["derive"] }

config = "0.15"

pdf_oxide = "0.3"

[profile.release]
lto = true
